objects/LLC_BI__Dimension_Range__c.object
<CustomObject>
    <description>This object stores the continuous dimensions used in a particular matrix and the associated values.</description>
    <fields>
        <fullName>LLC_BI__Dimension__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Administrators populate this required lookup field to associate the dimension range to a dimension. By default, the value is blank.</description>
        <inlineHelpText>Select the associated dimension.</inlineHelpText>
        <label>Dimension</label>
        <referenceTo>LLC_BI__Dimension__c</referenceTo>
        <relationshipLabel>Dimension Ranges</relationshipLabel>
        <relationshipName>Dimension_Ranges</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this required checkbox field to indicate that a range is inclusive of this maximum value. By default, the value is false.</description>
        <inlineHelpText>Select the checkbox to indicate that this range is inclusive of this maximum value.</inlineHelpText>
        <label>Maximum Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum__c</fullName>
        <description>Administrators populate this required number field to set a maximum value for a range. By default, the value is blank.</description>
        <inlineHelpText>Enter the maximum value for this range.</inlineHelpText>
        <label>Maximum</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this required checkbox field to indicate that a range is inclusive of this minimum value. By default, the value is false.</description>
        <inlineHelpText>Select the checkbox to indicate that this range is inclusive of this minimum value.</inlineHelpText>
        <label>Minimum Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum__c</fullName>
        <description>Administrators populate this required number field to set a minimum value for a range. By default, the value is blank.</description>
        <inlineHelpText>Enter the minimum value for this range.</inlineHelpText>
        <label>Minimum</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dimension Range</label>
    <nameField>
        <label>Dimension Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>